<resources>
  <string name="foundNewVersion">Found new version</string>
  <string name="prepareInstall">Prepare install</string>
  <string name="applicationIcon">Application Icon</string>
  <string name="empty" translatable="false" />
  <string name="backgroundImage">Background image</string>
  <string name="darkBackgroundImage">Dark the background image</string>
  <string name="hxLauncherSettings">HxLauncher Settings</string>
  <string name="hiveLayout">Hive layout</string>
  <string name="apn_setting_username">Username</string>
  <string name="setting_tab_name">Setting</string>
  <string name="about_info_coverage">Coverage</string>
  <string name="unlink_not_right">Not right</string>
  <string name="about_help_feedback_title">Help And Feedback</string>
  <string name="faq_title">FAQ</string>
  <string name="login_in">Login</string>
  <string name="login_login_button">Login</string>
  <string name="loginout_loginout_button">Log Out</string>
  <string name="stopWeb">Stop</string>
  <string name="forwardWeb">Forward</string>
  <string name="register">Register</string>
  <string name="enterPassword">Enter password</string>
  <string name="forgotPassword">Forgot password?</string>
  <string name="registerInfo">Register information</string>
  <string name="country">Country</string>
  <string name="needUnlock">Need unlock</string>
  <string name="startDownload">Start download</string>
  <string name="chinaPlus86">China +86</string>
  <string name="pleaseChooseCountry">Please choose your country</string>
  <string name="inputValidationCode">Enter the validation code</string>
  <string name="sendValidationCode">Send the validation code</string>
  <string name="setPassword">Set the password</string>
  <string name="emptyString" translatable="false"></string>
  <string name="submit">Submit</string>
  <string name="emailLogin">Login by email</string>
  <string name="hxlauncherService">HxLauncher Service</string>
  <string name="enable">Enable</string>
  <string name="sayYourOpinionled">Say your opinion</string>
  <string name="queryq">Query</string>
  <string name="charge">Charge</string>
  <string name="about">About</string>
  <string name="loginUsePhoneNumber">Login by phone</string>
  <string name="phoneRegister">Register by phone</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="passwordAgain">Repeat password</string>
  <string name="locks">Lock</string>
  <string name="loginSuccess">Logic successful</string>
  <string name="goAndEnableLocationService">Enable it</string>
  <string name="noNotEnableLocationService">Do not enable</string>
  <string name="rateUs">Rate us</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched.</string>
  <string name="button_ok">OK</string>
  <string name="firstStepEnableLanIme">Auto run</string>
  <string name="applicationFrequency">Application frequency</string>
  <string name="myAccount">My account</string>
  <string name="freeCredit">Free speech credit:</string>
  <string name="paidCredit">Paid speech credit</string>
  <array name="durationArray">
    <item>0s</item>
    <item>30s</item>
    <item>1m</item>
    <item>10m</item>
    <item>30m</item>
    <item>1h</item>
    <item>2h</item>
    <item>∞</item>
  </array>

    <string name="emailAddress">User name</string>
    <string name="shortcutAdded">Shortcut added</string>
    <string name="applicationAlias">Application alias</string>
    <string name="pleaseSetHxLauncherAsTheDefaultLauncher">Please set HxLauncher as the default launcher.</string>
    <string name="builtinShortcuts">Builtin shortcuts</string>
    <string name="sayToMeAppName">Say to me:\"%1$s\"</string>
    <string name="appNamePrompt">Messages</string>
    <string name="translateHelpSendFailed">The request of translation was not sent successfully, please try it again.</string>
    <string name="applicationRunningLog">Application running log</string>
    <string name="diagnoticInformationAboutFilesystem">Diagnose information about the file system</string>
    <string name="feedbackContentList">Feedback information list</string>
    <string name="feedbackFromUser">Feedback text from the user</string>
    <string name="weVeGotRootAccess">We\'ve got root access.</string>
    <string name="weDontHaveRootAccess">We don\'t have root access.</string>
    <string name="youAreFacingTheProblem">You are facing the problem.</string>
    <string name="pressTheButtonBelowToRepairThisProblem">Press the button below to repair this problem.</string>
    <string name="congratulationsYouDontHaveThisProblem">Congratulations. You don\'t have this problem.</string>
    <string name="app_name" translatable="false">OptimizeRepair</string>
    <string name="helpTranslateSubject">I would like you to translate OptimizeRepair into MYMOTHERTONE</string>
    <string name="myLanguageIs">My language is:</string>
    <string name="feedbackSendFailed">Failed to send the feedback, please retry.</string>
    <string name="feedbackSendSucceeded">Feedback sent successfully.</string>
    <string name="feedbackconfirmDaypass">Feedback</string>
    <string name="feedbackframeworkStartVsim">This application did not work? You have other suggestions? Please press the following button to send feedback.</string>
    <string name="pleaseInputFeedbackTextHere">Please input anything you want to say here:</string>
    <string name="stopVirtualSim">Reboot</string>
    <string name="weAreReady">Repair</string>
    <string name="frameworkStopVsim">Rate</string>
    <string name="ok">OK</string>
    <string name="pleaseDoNotToggleSwitches">Checking for root access...</string>
    <string name="pleaseTranslaterootAccess">Please translate</string>
    <string name="problemRepaired">Problem is repaired</string>
    <string name="forgetRejectedRootAccessForOptimizeRepair">Forget Rejected Root Access</string>
    <string name="needToForgetRejectedRootAccessLong">Root access managers usually remember your operations, so if you had rejected the root access request of OptimizeRepair at the beginning, then OptimizeRepair would be not able to request for root access any more. To fix that, you have to launch the root access manager and make it forget the rejection about OptimizeRepair. We can try to detect the root access manager and launch it for you, or you can launch the root access manager manually. And then, you have to make the root access manager forget OptimizeRepair.</string>
    <string name="frameworkStartVsim">Is there any friends facing the same problem? Please share this application to people who need it.</string>
    <string name="startVirtualSim">Detect problem</string>
    <string name="problemDetailsExplain">Details</string>

    <string name="tick">Tick</string>

    <string name="getProVersion">Get professional version</string>
    <string name="retryRootAccess">Retry</string>
    <string name="helpFix">Fix it</string>
    <string name="helpFixText">If you have rejected the root access request at the beginning, then you may need to make the root access manager forget OptimizeRepair in order to check root access again.</string>
    <string name="problemShortExplain">This application will solve the problem \"Android is upgrading, Optimizing application 10 of 43\"</string>
    <string name="clearOsiLog">Repair problem</string>
    <string name="confirmDaypass">Share</string>
    <string name="dontWaitSystemPrepare">Press the button below to reboot your device and verify the repairation. Notice that, you would not be asked to confirm the reboot.</string>
    <string name="restore">Restore</string>
    <string name="restoreToStatusBeforeRepairation">Restore the system to the status before repairation. If this app did not work as expected, you can click the button below to restore the system.</string>
    <string name="retryConnect">If your would like us to translate this application into your mothertone, please contact us.</string>
    <string name="alreadyHaveSuperNetwork">Is your problem solved by this application? Please rate it.</string>
    <string name="sendFeedbackNow">Send feedback now</string>
    <string name="textFeedback">Text feedback</string>
    <string name="typeAnythingYouWantToSay">Type anything you want to say</string>

    <string name="enterEmailAddressHere">Enter your email address here if you want us to reply:</string>
</resources>
