<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/b03"
                tools:context=".activity.FeedbackActivity"
                tools:ignore="Overdraw">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/frameworkStartVsim"

        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/frameworkStopVsim"
            android:animateLayoutChanges="true"

        >

            <RelativeLayout
                android:id="@+id/rootAccessGroupBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/a135211800200"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/donotToggleSwitchesTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="false"
                    android:layout_alignParentStart="false"
                    android:layout_alignParentTop="false"
                    android:layout_centerHorizontal="true"
                    android:focusableInTouchMode="true"
                    android:text="@string/feedbackContentList"
                    android:visibility="visible"
                    android:layout_marginTop="10dp"
                    android:textSize="32sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/virtualSimprogressBar1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"



                    android:visibility="visible"
                    android:layout_below="@id/donotToggleSwitchesTextView1"
                    android:text="@string/applicationRunningLog"
                    android:layout_marginTop="6dp"
                    android:textColor="@color/black"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/startVirtualSimButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_below="@id/virtualSimprogressBar1"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/startVirtualSim"
                    android:text="@string/diagnoticInformationAboutFilesystem"
                    android:visibility="visible"
                    android:indeterminate="true"
                    android:enabled="true"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/feedbackFromUser"
                    android:layout_below="@+id/startVirtualSimButton1"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tiptextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rootAccessGroupBox"
                android:layout_centerHorizontal="true"
                android:text="@string/weAreReady"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/d872afc8f04417800372"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/stopVirutalSimButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"

                    android:layout_centerHorizontal="true"

                    android:contentDescription="@string/stopVirtualSim"
                    android:padding="10dp"
                    android:text="@string/textFeedback"
                    android:textSize="32sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/uifacingProblemlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="visible"
                    android:text="@string/pleaseInputFeedbackTextHere"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/stopVirutalSimButton1"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"

                    android:id="@+id/textFeedbackeditText"


                    android:hint="@string/typeAnythingYouWantToSay"
                    android:layout_alignParentBottom="false"

                    android:layout_below="@+id/uifacingProblemlabel"
                    android:lines="@integer/seven" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/emailtiptextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tiptextView1"
                android:layout_centerHorizontal="true"
                android:text="@string/weAreReady"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/o13_002186gray"
                android:layout_margin="10dp">

                <TextView
                    android:id="@+id/emailTitlestopVirutalSimButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"

                    android:layout_centerHorizontal="true"

                    android:contentDescription="@string/stopVirtualSim"
                    android:padding="10dp"
                    android:text="@string/email"
                    android:textSize="32sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/emailPromptuifacingProblemlabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:visibility="visible"
                    android:text="@string/enterEmailAddressHere"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/emailTitlestopVirutalSimButton1"
                    android:textColor="@color/black" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:id="@+id/emailtextFeedbackeditText"


                    android:hint="@string/email"
                    android:layout_alignParentBottom="false"

                    android:layout_below="@+id/emailPromptuifacingProblemlabel"
                    android:lines="@integer/one"
                    android:inputType="textEmailAddress"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/uirepairProblemgroupBox_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailtiptextView1"
                android:layout_centerHorizontal="true"

                android:layout_margin="10dp"
                android:background="@drawable/f6175"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/clarnOsiLogbutton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_centerHorizontal="true"
                    android:text="@string/sendFeedbackNow"
                    android:textSize="32sp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/sendFeedbackprogressValuetextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/sendFeedbackNow"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/orange1"
                    android:background="@color/light_gray"
                    android:layout_below="@id/clarnOsiLogbutton1" />

                <ProgressBar
                    android:id="@+id/sendFeedbackuirepairprogressBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="false"
                    android:layout_below="@id/sendFeedbackprogressValuetextView1"
                    android:text="@string/dontWaitSystemPrepare"
                    style="@android:style/Widget.ProgressBar.Horizontal"

                    android:indeterminate="true"
                    android:layout_marginTop="5dp"
                    android:visibility="invisible" />
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>


</RelativeLayout>